--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 
-    <!-- Js -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>     
 </head>
 <body>
     <h1>Our Menu</h1>
@@ -28,7 +26,7 @@
         <div  class="container">
             <h3>Chicken</h3>
             <p>
-                Expedita soluta, dignissimos voluptatum esse deserunt blanditiis. Laudantium quod dignissimos sed consequuntur quis minima a quibusdam. Velit natus porro soluta, id reprehenderit quia atque, voluptas, cum consectetur aspernatur eveniet? Illum qui quos magni unde cumque earum quo debitis delectus tempora explicabo alias sed, dignissimos, beatae possimus quia molestias dolore rerum.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque delectus suscipit possimus quis aspernatur ab repudiandae earum. Dolor consequatur libero natus amet quam nobis earum, deleniti quae quas? Odio quasi expedita, dolores numquam aliquid harum maxime quibusdam quisquam id ducimus soluta magni sit!
             </p>
         </div>
     </section>
@@ -37,7 +35,7 @@
         <div class="container">
             <h3>Beef</h3>
             <p>
-                 Expedita soluta, dignissimos voluptatum esse deserunt blanditiis. Laudantium quod dignissimos sed consequuntur quis minima a quibusdam. Velit natus porro soluta, id reprehenderit quia atque, voluptas, cum consectetur aspernatur eveniet? Illum qui quos magni unde cumque earum quo debitis delectus tempora explicabo alias sed, dignissimos, beatae possimus quia molestias dolore rerum.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque delectus suscipit possimus quis aspernatur ab repudiandae earum. Dolor consequatur libero natus amet quam nobis earum, deleniti quae quas? Odio quasi expedita, dolores numquam aliquid harum maxime quibusdam quisquam id ducimus soluta magni sit!
             </p>
         </div>
     </section>
@@ -46,7 +44,7 @@
         <div class="container">
             <h3>Sushi</h3>
             <p>
-                Expedita soluta, dignissimos voluptatum esse deserunt blanditiis. Laudantium quod dignissimos sed consequuntur quis minima a quibusdam. Velit natus porro soluta, id reprehenderit quia atque, voluptas, cum consectetur aspernatur eveniet? Illum qui quos magni unde cumque earum quo debitis delectus tempora explicabo alias sed, dignissimos, beatae possimus quia molestias dolore rerum.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque delectus suscipit possimus quis aspernatur ab repudiandae earum. Dolor consequatur libero natus amet quam nobis earum, deleniti quae quas? Odio quasi expedita, dolores numquam aliquid harum maxime quibusdam quisquam id ducimus soluta magni sit!
             </p>
         </div>
     </section>
